Fix: [ not align in kbd

--- a/src/css/components/_component.scss
+++ b/src/css/components/_component.scss
@@ -157,6 +157,10 @@ kbd {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono",
+    "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono",
+    "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L",
+    "Courier New", Courier, monospace;
 }
 
 // Code & output
